--- a/man/requirejs-dependencies.1
+++ b/man/requirejs-dependencies.1
@@ -11,7 +11,7 @@ requirejs-dependencies - RequireJS dependncy tracer
 .I path
 ]
 .br
-[--common] [-V|--version] [-h|--help]
+[--common] [--between-bundles] [-V|--version] [-h|--help]
 .I module...
 .RE
 
@@ -29,6 +29,9 @@ configuration file for RequireJS
 .IP "--common"
 print only common dependencies for more modules
 .B
+.IP "--between-bundles"
+print bundles as dependents instead of modules
+.B
 .IP "-V, --version"
 print version number
 .B
@@ -36,9 +39,13 @@ print version number
 print usage instructions
 
 .RE
+If you enable the option between-bundles, you need to include bundles
+in your config, so that relations module <--> bundle can be built.
+
 If no arguments are provided, usage instructions will be printed out.
 Errors and timing are printed on standard error. Dependencies, usage
 instructions and version number are printed on standard output.
+
 A non-zero exit code is returned in case of error.
 
 .SH EXAMPLES
