--- a/man/requirejs-dependencies.1
+++ b/man/requirejs-dependencies.1
@@ -30,7 +30,7 @@ configuration file for RequireJS
 print only common dependencies for more modules
 .B
 .IP "--between-bundles"
-print bundles as dependents instead of modules
+print bundles as dependencies instead of modules
 .B
 .IP "-V, --version"
 print version number
